tests/compile_fail/invalid_filter_field.stderr
error[E0593]: function is expected to take 1 argument, but it takes 0 arguments
 --> tests/compile_fail/invalid_filter_field.rs:5:14
  |
5 |     #[filter(bad_filter)]
  |              ^^^^^^^^^^ expected function that takes 1 argument
...
8 | fn bad_filter() {}
  | --------------- takes 0 arguments
  |
note: required by a bound in `_filter_fn`
 --> tests/compile_fail/invalid_filter_field.rs:2:10
  |
2 | #[derive(Arbitrary, Debug, PartialEq)]
  |          ^^^^^^^^^ required by this bound in `_filter_fn`
  = note: this error originates in the derive macro `Arbitrary` (in Nightly builds, run with -Z macro-backtrace for more info)
